--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <script src="https://kit.fontawesome.com/eb5059a9c1.js" crossorigin="anonymous"></script>
-
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <script
+      src="https://kit.fontawesome.com/eb5059a9c1.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="icon" type="image/svg+xml" href="/src/assets/icono.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dolce Momento</title>
+    <script>
+      window.addEventListener("blur", function () {
+        document.title = "¡Vuelve a Dolce Momento!";
+      });
+      window.addEventListener("focus", function () {
+        document.title = "Dolce Momento | Pasteleria";
+      });
+    </script>
+    <title>Dolce Momento | Pasteleria</title>
   </head>
   <body>
     <div id="root"></div>
